[gd_scene load_steps=11 format=2]

[ext_resource path="res://img/game_over.png" type="Texture" id=1]
[ext_resource path="res://img/Recurso 3.png" type="Texture" id=2]
[ext_resource path="res://fuentes/Pocket Money.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://script/Game.gd" type="Script" id=4]
[ext_resource path="res://fuentes/ARIALNB.TTF" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=1]
size = 140
outline_color = Color( 0.647059, 0.152941, 0.152941, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 90
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=5]
size = 40
font_data = ExtResource( 5 )

[sub_resource type="Animation" id=3]
resource_name = "Nueva Animación"
tracks/0/type = "bezier"
tracks/0/path = NodePath("CanvasLayer/label:modulate:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.6 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("CanvasLayer/label:modulate:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.6 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("CanvasLayer/label:modulate:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.6 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("CanvasLayer/label:modulate:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.6 )
}

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "bezier"
tracks/0/path = NodePath("CanvasLayer/label:modulate:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("CanvasLayer/label:modulate:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("CanvasLayer/label:modulate:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("CanvasLayer/label:modulate:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[node name="Game" type="Node"]
pause_mode = 2
script = ExtResource( 4 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
pause_mode = 2

[node name="TextureRect" type="TextureRect" parent="CanvasLayer"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true

[node name="TextureButton" type="TextureButton" parent="CanvasLayer"]
pause_mode = 2
margin_left = 1390.0
margin_top = 880.0
margin_right = 1552.0
margin_bottom = 1043.0
texture_normal = ExtResource( 2 )
expand = true

[node name="label" type="Node2D" parent="CanvasLayer"]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 1379, 929 )

[node name="Label" type="Label" parent="CanvasLayer/label"]
margin_left = -159.0
margin_top = -586.0
margin_right = 324.0
margin_bottom = -281.0
custom_fonts/font = SubResource( 1 )
text = "Puntos"
align = 1

[node name="Label2" type="Label" parent="CanvasLayer/label"]
margin_left = -98.0
margin_top = -404.0
margin_right = 289.0
margin_bottom = -227.0
custom_fonts/font = SubResource( 2 )
text = "0
"
align = 1

[node name="puntos" type="Node2D" parent="CanvasLayer"]

[node name="Label" type="Label" parent="CanvasLayer/puntos"]
margin_left = 371.0
margin_top = 185.0
margin_right = 667.0
margin_bottom = 305.0
custom_fonts/font = SubResource( 5 )
text = "NAMEE"
align = 1
valign = 1

[node name="Label2" type="Label" parent="CanvasLayer/puntos"]
margin_left = 371.0
margin_top = 341.0
margin_right = 667.0
margin_bottom = 461.0
custom_fonts/font = SubResource( 5 )
text = "NAMEE"
align = 1
valign = 1

[node name="Label3" type="Label" parent="CanvasLayer/puntos"]
margin_left = 368.0
margin_top = 506.0
margin_right = 664.0
margin_bottom = 626.0
custom_fonts/font = SubResource( 5 )
text = "NAMEE"
align = 1
valign = 1

[node name="Label4" type="Label" parent="CanvasLayer/puntos"]
margin_left = 372.0
margin_top = 694.0
margin_right = 668.0
margin_bottom = 814.0
custom_fonts/font = SubResource( 5 )
text = "NAMEE"
align = 1
valign = 1

[node name="Label5" type="Label" parent="CanvasLayer/puntos"]
margin_left = 380.0
margin_top = 838.0
margin_right = 676.0
margin_bottom = 958.0
custom_fonts/font = SubResource( 5 )
text = "NAMEE"
align = 1
valign = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
"anims/Nueva Animación" = SubResource( 3 )
anims/RESET = SubResource( 4 )

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[connection signal="pressed" from="CanvasLayer/TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
